MovieSuggestion/istio-rules/actors-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: actors
spec:
  hosts:
  - actors
  http:
  - route:
    - destination:
        host: actors.default.svc.cluster.local
    fault:
      abort:
        percentage:
           value: 100
        httpStatus: 503
