MovieSuggestion/istio-rules/darklaunch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: movies
spec:
  host: movies
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
  - movies
  http:
  - match:
    - headers:
        user:
          exact: tester
    route:
    - destination:
        host: movies
        subset: v2
  - route:
    - destination:
        host: movies
        subset: v1
