MovieSuggestion/istio-rules/frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - moviesuggestion-gateway
  http:
    - name: "login"
      match:
        - uri:
            prefix: "/jwtlogin"
      route:
        - destination:
            host: moviesuggestion-login
    - name: "main"
      route:
        - destination:
            host: moviesuggestion-ui
