MovieSuggestion/istio-rules/movies-trafficsplit-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: movies
spec:
  host: movies
  trafficPolicy:
    #    tls:
    #      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
