MovieSuggestion/istio-rules/movies-v1-failure-50-percent.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
    - movies
  http:
    - route:
        - destination:
            host: movies
            subset: v1
          weight: 50 
        - destination:
            host: movies
            subset: v2
          weight: 50            
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 503
