MovieSuggestion/istio-rules/movies-v3-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: movies
spec:
  host: movies
  subsets:
  - name: v3
    labels:
      version: v3
