MovieSuggestion/istio-rules/movies-v3-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movies
spec:
  hosts:
    - movies
  http:
  - route:
    - destination:
        host: movies
        subset: v3
