MovieSuggestion/istio-rules/moviesuggestion-test-to-live.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moviesuggestion-ui-v2
spec:
  hosts:
    - www.devopstower.com
  gateways:
    - moviesuggestion-gateway
  http:
  - route:
    - destination:
        host: moviesuggestion-ui
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moviesuggestion-ui
spec:
  hosts:
    - test.devopstower.com
  gateways:
    - moviesuggestion-gateway
  http:
  - route:
    - destination:
        host: moviesuggestion-ui
        subset: v1
