MovieSuggestion/istio-rules/moviesuggestion-ui-v2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviesuggestion-ui-v2
  labels:
    app: moviesuggestion-ui
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moviesuggestion-ui
      version: v2
  template:
    metadata:
      labels:
        app: moviesuggestion-ui
        version: v2
    spec:
      serviceAccountName: moviesuggestion-ui
      containers:
        - name: moviesuggestion-ui
          image: codesparks/examples-moviesuggestion-ui-v2:2.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
             initialDelaySeconds: 60
             httpGet:
               path: /actuator/health
               port: 8080
          readinessProbe:
             httpGet:
               path: /ready
               port: 8080
          imagePullPolicy: Always
          ports:
          - containerPort: 8080         
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: moviesuggestion-ui
spec:
  host: moviesuggestion-ui
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moviesuggestion-ui
spec:
  hosts:
  - "www.istiomesh.com"
  gateways:
  - moviesuggestion-gateway
  http:
  - route:
    - destination:
        host: moviesuggestion-ui
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moviesuggestion-ui-v2
spec:
  hosts:
  - "test.istiomesh.com"
  gateways:
  - moviesuggestion-gateway
  http:
  - route:
    - destination:
        host: moviesuggestion-ui
        subset: v2
