MovieSuggestion/istio-rules/moviesuggestion-ui-vs-rewrite.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moviesuggestion-ui
spec:
  hosts:
  - "*"
  gateways:
  - moviesuggestion-gateway
  http:
  - match:
     - uri:
         regex: "/"
    rewrite:
       uri: /movie/suggestion
    route:
    - destination:
        host: moviesuggestion-ui
  - route:
    - destination:
        host: moviesuggestion-ui
