MovieSuggestion/istio-rules/moviesuggestion-ui-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moviesuggestion-ui
spec:
  hosts:
    - "*"
  gateways:
    - moviesuggestion-gateway
  http:
    - route:
        - destination:
            host: moviesuggestion-ui
