MovieSuggestion/istio-rules/recommendation-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - "*"
  gateways:
  - recommendation-gateway
  http:
  - route:
    - destination:
        host: recommendation
