MovieSuggestion/istio-rules/moviesuggestion-ui-authz-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: moviesuggestion-ui-authz
  namespace: default
spec:  
  selector:
    matchLabels:
      app: moviesuggestion-ui
