MovieSuggestion/istio-rules/movisuggestion-ui-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: moviesuggestion-ui-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: moviesuggestion-ui
  jwtRules:
  - issuer: "testing@codesparks.com"
    jwksUri: "https://raw.githubusercontent.com/code-sparks/examples/master/MovieSuggestion/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: moviesuggestion-ui
  namespace: default
spec:
  selector:
    matchLabels:
      app: moviesuggestion-ui
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
